--- a/app.json
+++ b/app.json
@@ -12,8 +12,8 @@
   "env": {
     "SESSION_ID": {
       "description": "Enter your Xploader session id here; must start with XPLOADER-BOT:~",
-      "value": "XPLOADER-BOT:~j3pmSARQ#V27aN3HbudPHRofjpP8TllDcXbNbjQpM-fOrYIkl1K8",
-      "required": false
+      "value": "",
+      "required": true
     },
     "BOT_NAME": {
       "description": "Enter your bot name here",
@@ -27,7 +27,7 @@
     },
     "OWNER_NAME": {
       "description": "Enter your name here",
-      "value": "Take Tee",
+      "value": "Mr Take Tee",
       "required": true
     },
     "STICKER_PACK_NAME": {
@@ -73,17 +73,17 @@
     "AUTO_STATUS_REACT": {
       "description": "Set true to enable and false to disable auto status react",
       "value": "true",
-      "required": true
+      "required": true 
     },
     "STATUS_EMOJI": {
       "description": "Set your desired status reaction emoji",
       "value": "🥰",
-      "required": true
+      "required": true 
     },
     "CHATBOT": {
       "description": "Set true to enable and false to disable auto reply chatbot",
       "value": "false",
-      "required": false 
+      "required": false
     },
     "ANTI_CALL": {
       "description": "Set true to enable and false to disable anti-call feature",
@@ -93,27 +93,27 @@
     "WELCOME_MSG": {
       "description": "Set true to enable and false to disable welcome messages",
       "value": "true",
-      "required": true
+      "required": true 
     },
     "TIMEZONE": {
       "description": "Enter your timezone here. Google or don't edit if you don't know!",
       "value": "Africa/Nairobi",
-      "required": true
+      "required": false
     },
     "SUDO": {
       "description": " Type additional allowed users here. They'll be able to use all the functions of the bot without restrictions. Separate with comma incase of more than one number.",
-      "value": "2327444813
+      "value": "23274448130",
       "required": true 
     },
     "AUTO_READ": {
       "description": "Set true to enable automatic reading of messages",
-      "value": "true",
+      "value": "false",
       "required": false
     },
     "MENU_STYLE": {
       "description": "Menu style, options 1, 2, 3, 4 or 5",
       "value": "3",
-      "required": true
+      "required": true 
     }
   },
     "buildpacks": [
